--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,8 @@
   </div>
 
   <script>
-    const API_BASE = 'http://localhost:5000/api';
+    const API_BASE = 'https://social-media-app-rtxu.onrender.com/api';
+
 
     // Toggle forms
     const loginForm = document.getElementById('login-form');
